--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@getbrevo/brevo": "^1.0.1",
     "@heroicons/react": "^2.0.18",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@types/node": "20.5.7",
@@ -28,6 +29,7 @@
     "react-icons": "^4.10.1",
     "react-social-icons": "^5.15.0",
     "sharp": "^0.32.5",
+    "sib-api-v3-typescript": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
